fixed the manual

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,6 @@
+2017-01-05: Ver. 0.9.1
+  * add a tolerance level option to Phase II
+
 2017-01-05: Ver. 0.9.0
   * Unify Phase I and Phase II charts, and documents and manuals added
 
